# pyshallow

./: .gitmodules  LICENSE  README.md  mue_idle.py  nix_run.sh  pyproject.toml  pyshallow.spec  pyshallow_nix.sh  pyshallow_win.bat  run.bat  win_run.bat
Contents/MacOS/: nix_run.sh  run.sh
_extra/dash/: mi.desktop
_tools/: icons.sh
assets/linux/: pyshallow.desktop
assets/macos/: pyshallow.icns
gen_evt/: __init__.py  _android.py  _osx.py  _win.py  _x11.py
pyshallow/: __init__.py  __main__.py  version.py
pyshallow/gen_evt/: __init__.py  _android.py  _osx.py  _win.py  _x11.py
